Prevent setup tile to become too big

--- a/webroot/scss/partials/_home.scss
+++ b/webroot/scss/partials/_home.scss
@@ -561,6 +561,7 @@
     margin: .5em;
 
     max-height: 372.68px;
+    max-width: 49%;
     border-radius: 4px;
     overflow: hidden;
 }
